# diego-chatbot

./: .env  .env.example  .gitignore  README.md  api_server.py  chatbot.py  demo_usage.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.bat  start_backend.bat  start_backend.py
backend/: api_server.py  start_backend.py
chroma_db/: chroma.sqlite3
data/: AboutMe.docx  test.txt
data/ascii_frames/: frame_0000.txt  frame_0001.txt  frame_0002.txt  frame_0006.txt  frame_0007.txt  frame_0010.txt  frame_0014.txt  frame_0016.txt  frame_0019.txt  frame_0020.txt  frame_0024.txt  frame_0028.txt  frame_0035.txt  frame_0036.txt  frame_0037.txt  frame_0039.txt  frame_0044.txt  frame_0051.txt  frame_0061.txt  frame_0062.txt  frame_0064.txt  frame_0066.txt
data/ballet Animated ASCII Art - ANIMATED ASCII ART_files/: ballet Animated ASCII Art - ANIMATED ASCII ART.html  css  f.txt  js
diego-chatbot/src/: App.tsx
docs/: TODO  demo_usage.md  diegobeuk-system.md  portfolio-chatbot-architecture.txt  portfolio-chatbot-brief.txt  portfolio-chatbot-prd.txt  portfolio_chatbot_brainstorm.txt
public/data/ascii_frames/: frame_0003.txt  frame_0008.txt  frame_0011.txt  frame_0022.txt  frame_0025.txt  frame_0026.txt  frame_0029.txt  frame_0030.txt  frame_0032.txt  frame_0034.txt  frame_0040.txt  frame_0041.txt  frame_0042.txt  frame_0045.txt  frame_0048.txt  frame_0049.txt  frame_0053.txt  (+5 more)
scripts/: start.sh
src/: AnimatedAscii.tsx  App.css  App.tsx  useAsciiFrames.ts
src/components/: AnimatedAscii.tsx  App.tsx
src/styles/: App.css
(+25 files in other folders)
