[project]
name = "diego-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.119.1",
    "langchain>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "unstructured[local-inference]>=0.18.15",
    "uvicorn[standard]>=0.38.0",
]
